syntax = "proto3";

package com.kerfume.remind.protos;

import "google/protobuf/empty.proto";

service RemindListService {
  rpc Add (RemindOfDate) returns (AddResult) {}
  // 引数なし
  rpc List (google.protobuf.Empty) returns (RemindList) {}
}

enum RemindStatus {
  TODO = 0;
  UNRESOLVED = 1;
  RESOLVED = 2;
}

message RemindOfDate {
  uint64 seqNum = 1;
  string title = 2;
  string trigger = 3;
  RemindStatus status = 4;
}

enum ActorState {
  OK = 0;
  ERROR = 1;
  PROGRESS = 2;
}

message AddResult {
  ActorState state = 1;
}

message RemindList { repeated RemindOfDate reminds = 1; }